--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
+    "cheerio": "^0.20.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
@@ -31,6 +32,7 @@
     "handlebars": "^4.0.5",
     "method-override": "^2.3.6",
     "mysql": "^2.10.2",
+    "passport": "^0.3.2",
     "path": "^0.12.7",
     "promise": "^7.1.1",
     "request": "^2.72.0",
