--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "request": "^2.72.0",
     "sequelize": "^3.23.3",
     "sequelize-cli": "^2.4.0"
+  },
+  "devDependencies": {
+    "handlebars-helper-css": "^0.1.0"
   }
 }
