--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/vporta/cesarCell#readme",
   "dependencies": {
+    "axios": "^0.12.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
@@ -37,7 +38,8 @@
     "promise": "^7.1.1",
     "request": "^2.72.0",
     "sequelize": "^3.23.3",
-    "sequelize-cli": "^2.4.0"
+    "sequelize-cli": "^2.4.0",
+    "xml2js": "^0.4.16"
   },
   "devDependencies": {
     "handlebars-helper-css": "^0.1.0"
