--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "path": "^0.12.7",
     "promise": "^7.1.1",
     "request": "^2.72.0",
+    "requirejs": "^2.2.0",
     "sequelize": "^3.23.3",
     "sequelize-cli": "^2.4.0",
     "xml2js": "^0.4.16"
