--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
     "host": "localhost",
     "username": "root",
     "password": "",
-    "database": "facts_db"
+    "database": "cesarcells_db"
   },
   "test": {
     "username": "root",
