--- a/package.json
+++ b/package.json
@@ -22,24 +22,37 @@
   "homepage": "https://github.com/vporta/cesarCell#readme",
   "dependencies": {
     "axios": "^0.12.0",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "cookie-parser": "^1.4.3",
+    "core-js": "^2.4.0",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
+    "favicon": "0.0.2",
     "file-system": "^2.2.1",
     "handlebars": "^4.0.5",
     "method-override": "^2.3.6",
+    "morgan": "^1.7.0",
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "path": "^0.12.7",
     "promise": "^7.1.1",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "react-router": "^2.5.2",
     "request": "^2.72.0",
     "requirejs": "^2.2.0",
-    "sequelize": "^3.23.3",
+    "sequelize": "^2.0.0-rc1",
     "sequelize-cli": "^2.4.0",
+    "sqlite3": "^3.1.4",
+    "webpack": "^1.13.1",
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
