--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "webpack -w & nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/vporta/cesarCell#readme",
   "dependencies": {
     "axios": "^0.12.0",
+    "babel": "^6.5.2",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -30,7 +31,6 @@
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.4.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
@@ -45,10 +45,10 @@
     "path": "^0.12.7",
     "promise": "^7.1.1",
     "react": "^15.2.0",
+    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.0",
     "react-router": "^2.5.2",
     "request": "^2.72.0",
-    "requirejs": "^2.2.0",
     "sequelize": "^2.0.0-rc1",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.4",
@@ -56,6 +56,10 @@
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "handlebars-helper-css": "^0.1.0"
   }
 }
