--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "debug": "^2.2.0",
+    "csrf": "^3.0.3",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
@@ -39,21 +41,21 @@
     "file-system": "^2.2.1",
     "handlebars": "^4.0.5",
     "method-override": "^2.3.6",
+    "mongojs": "^2.4.0",
+    "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
-    "mysql": "^2.10.2",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
-    "promise": "^7.1.1",
     "react": "^15.2.0",
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.0",
     "react-router": "^2.5.2",
     "request": "^2.72.0",
-    "sequelize": "^2.0.0-rc1",
-    "sequelize-cli": "^2.4.0",
-    "sqlite3": "^3.1.4",
-    "webpack": "^1.13.1",
-    "xml2js": "^0.4.16"
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
