--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-draggable": "^2.1.2",
     "react-router": "^2.5.2",
     "request": "^2.72.0",
+    "sendgrid": "^3.0.10",
     "underscore": "^1.8.3",
     "webpack": "^1.13.1"
   },
