--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "favicon": "0.0.2",
     "file-system": "^2.2.1",
     "handlebars": "^4.0.5",
+    "jquery": "^3.1.0",
     "jsonwebtoken": "^7.1.6",
     "method-override": "^2.3.6",
     "mongojs": "^2.4.0",
