--- a/package.json
+++ b/package.json
@@ -53,13 +53,17 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
+    "querystring": "^0.2.0",
     "react": "^15.2.0",
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.0",
     "react-draggable": "^2.1.2",
     "react-router": "^2.5.2",
     "request": "^2.72.0",
+    "sendbird": "^2.4.24",
     "sendgrid": "^3.0.10",
+    "simple-oauth2": "^0.8.0",
+    "sitemap": "^1.8.1",
     "underscore": "^1.8.3",
     "webpack": "^1.13.1"
   },
