--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "csrf": "^3.0.3",
+    "d3": "4.2.1",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
@@ -42,6 +43,7 @@
     "file-system": "^2.2.1",
     "handlebars": "^4.0.5",
     "jquery": "^3.1.0",
+    "jsdom": "9.4.2",
     "jsonwebtoken": "^7.1.6",
     "method-override": "^2.3.6",
     "mongojs": "^2.4.0",
