--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mongojs": "^2.4.0",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
+    "ngrok": "2.2.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
