--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "favicon": "0.0.2",
     "file-system": "^2.2.1",
     "handlebars": "^4.0.5",
+    "hover.css": "2.0.2",
     "jquery": "^3.1.0",
     "jsdom": "9.4.2",
     "jsonwebtoken": "^7.1.6",
