--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-session": "^1.13.0",
     "favicon": "0.0.2",
     "file-system": "^2.2.1",
+    "getstream-node": "1.1.0",
     "handlebars": "^4.0.5",
     "hover.css": "2.0.2",
     "jquery": "^3.1.0",
