progress bar completed

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.0",
     "react-draggable": "^2.1.2",
+    "react-progressbar": "1.2.0",
     "react-router": "^2.5.2",
     "request": "^2.72.0",
     "sendgrid": "^3.0.10",
