--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "jquery": "^3.1.0",
     "jsdom": "9.4.2",
     "jsonwebtoken": "^7.1.6",
+    "loadtest": "2.0.2",
     "method-override": "^2.3.6",
     "mongojs": "^2.4.0",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
-    "multer": "1.2.0",
     "ngrok": "2.2.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
