--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/vporta/cesarCell#readme",
   "dependencies": {
+    "analytics-node": "2.1.0",
     "async": "^2.0.1",
     "axios": "^0.12.0",
     "babel": "^6.5.2",
