--- a/package.json
+++ b/package.json
@@ -79,6 +79,10 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "handlebars-helper-css": "^0.1.0"
+    "chai": "3.5.0",
+    "commitizen": "2.8.6",
+    "cz-conventional-changelog": "1.2.0",
+    "handlebars-helper-css": "^0.1.0",
+    "mocha": "3.0.2"
   }
 }
