--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "1.3.2",
+    "connect-mongodb-session": "1.2.0",
     "cookie-parser": "^1.4.3",
     "csrf": "^3.0.3",
     "d3": "4.2.1",
