--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-system": "^2.2.1",
     "getstream-node": "1.1.0",
     "handlebars": "^4.0.5",
+    "helmet": "2.3.0",
     "hover.css": "2.0.2",
     "jquery": "^3.1.0",
     "jsdom": "9.4.2",
